<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/fb_ts_happy" android:paddingLeft="12.0dip" android:paddingTop="2.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="12.0dip" android:paddingEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="fill_parent">
        <ImageView android:id="@id/auction_winner_icon" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="4.0dip" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="fill_horizontal|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="4.0dip" android:minHeight="40.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="0.0dip">
        <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance1" android:id="@id/auction_winner_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/winner_ad" />
        <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance2" android:id="@id/network_instance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/instance_id" android:maxLines="1" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="2.0sp" />
        <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance2" android:id="@id/winning_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/net_payout" />
    </LinearLayout>
</LinearLayout>