<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/TestSuite_Placements" android:background="@color/fb_ts_placements" android:paddingTop="@dimen/fb_ts_padding_top" android:layout_width="fill_parent" android:layout_height="@dimen/fb_ts_main_screen_entries_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/back" android:background="@android:color/transparent" android:padding="8.0dip" android:visibility="visible" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:src="@drawable/fb_ic_arrow_back_white" android:contentDescription="@string/fb_ts_action_back_description" android:layout_marginStart="8.0dip" />
    <TextView android:textStyle="bold" android:id="@id/placements_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/fb_ts_placements" android:layout_toRightOf="@id/back" android:layout_alignParentTop="true" android:layout_toEndOf="@id/back" style="@style/FB_MediationStatus.TextAppearance" />
    <ImageView android:layout_gravity="end|center|top" android:id="@id/TestSuite_CloseImageButton" android:background="@android:color/transparent" android:padding="8.0dip" android:visibility="visible" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/fb_ic_close_white" android:layout_alignParentRight="true" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" />
    <TextView android:textStyle="bold" android:id="@id/placements_header_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="48.0dip" android:text="@string/fb_ts_placements_header_2" android:layout_below="@id/placements_header" android:layout_marginStart="20.0dip" android:layout_marginEnd="48.0dip" style="@style/FB_MediationStatus.TextAppearance.Display" />
    <TextView android:id="@id/placements_sub_header_2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="variant name" android:layout_below="@id/placements_header_2" android:layout_alignLeft="@id/placements_header_2" android:layout_alignRight="@id/placements_header_2" android:layout_alignStart="@id/placements_header_2" android:layout_alignEnd="@id/placements_header_2" style="@style/FB_MediationStatus.TextAppearance.Display" />
    <TextView android:gravity="bottom" android:id="@id/placements_header_3" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fb_ts_placements_header_3_main" android:layout_alignLeft="@id/placements_header_2" android:layout_alignRight="@id/placements_header_2" android:layout_alignParentBottom="true" android:layout_alignStart="@id/placements_header_2" android:layout_alignEnd="@id/placements_header_2" style="@style/FB_MediationStatus.TextAppearance" />
</RelativeLayout>