<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/TestSuite_StatusFrame" android:background="@color/fb_ts_happy" android:paddingTop="@dimen/fb_ts_padding_top" android:layout_width="fill_parent" android:layout_height="@dimen/fb_ts_main_screen_entries_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:id="@id/TestSuite_StatusMediationHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/fb_ts_mediation" android:layout_toRightOf="@id/back" android:layout_alignParentTop="true" android:layout_toEndOf="@id/back" style="@style/FB_MediationStatus.TextAppearance" />
    <TextView android:textStyle="bold" android:id="@id/TestSuite_TitleLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="48.0dip" android:text="@string/fb_ts_mediation_status_happy" android:layout_below="@id/TestSuite_StatusMediationHeader" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_marginStart="20.0dip" android:layout_marginEnd="48.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" style="@style/FB_MediationStatus.TextAppearance.Display" />
    <TextView android:gravity="bottom" android:id="@id/TestSuite_MediationSummaryLabel" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fb_ts_mediation_summary_happy" android:layout_alignLeft="@id/TestSuite_TitleLabel" android:layout_alignRight="@id/TestSuite_TitleLabel" android:layout_alignParentBottom="true" android:layout_alignStart="@id/TestSuite_TitleLabel" android:layout_alignEnd="@id/TestSuite_TitleLabel" style="@style/FB_MediationStatus.TextAppearance" />
    <ImageView android:id="@id/TestSuite_StatusIcon" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-16.0dip" android:layout_marginBottom="-16.0dip" android:src="@drawable/fb_ic_smiley_happy" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginEnd="-16.0dip" android:layout_alignParentEnd="true" />
    <FrameLayout android:id="@id/TestSuite_Networks" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:id="@id/back" android:background="@android:color/transparent" android:padding="8.0dip" android:visibility="visible" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:src="@drawable/fb_ic_arrow_back_white" android:contentDescription="@string/fb_ts_action_back_description" android:layout_marginStart="8.0dip" />
    <ImageView android:layout_gravity="end|center|top" android:id="@id/TestSuite_CloseImageButton" android:background="@android:color/transparent" android:padding="8.0dip" android:visibility="visible" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/fb_ic_close_white" android:layout_alignParentRight="true" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" />
</RelativeLayout>