<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/fb_ts_button_bg_default" android:paddingLeft="16.0dip" android:paddingTop="9.0dip" android:paddingRight="16.0dip" android:paddingBottom="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="fill_horizontal|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginStart="5.0dip">
        <LinearLayout android:gravity="fill_horizontal|center" android:orientation="horizontal" android:id="@id/request_status_audit_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance2" android:textColor="@color/fb_ts_text_disabled" android:layout_gravity="center" android:id="@id/request_status_audit_waterfall_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fb_ts_footer_auditing_traditional_waterfall" />
            <ImageView android:id="@id/waterfall_auditing_finish_indicator" android:background="@android:drawable/presence_online" android:visibility="invisible" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginLeft="10.0dip" android:contentDescription="@string/fb_ts_footer_finish_indicator" android:layout_marginStart="10.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="fill_horizontal|center" android:orientation="horizontal" android:id="@id/request_status_auction_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
            <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance2" android:textColor="@color/fb_ts_text_disabled" android:layout_gravity="center" android:id="@id/request_status_auction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fb_ts_footer_running_programmatic_auction" />
            <ImageView android:id="@id/auction_finish_indicator" android:background="@android:drawable/presence_online" android:visibility="invisible" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginLeft="10.0dip" android:contentDescription="@string/fb_ts_footer_finish_indicator" android:layout_marginStart="10.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="fill_horizontal|center" android:orientation="horizontal" android:id="@id/request_status_programmatic_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/FB_FB_Placements.TextAppearance2" android:textColor="@color/fb_ts_text_disabled" android:id="@id/request_status_loading_ad" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fb_ts_footer_loading_ad" />
            <ImageView android:id="@id/loading_ad_finish_indicator" android:background="@android:drawable/presence_online" android:visibility="invisible" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginLeft="10.0dip" android:contentDescription="@string/fb_ts_footer_finish_indicator" android:layout_marginStart="10.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>